--- a/ship.html
+++ b/ship.html
@@ -634,27 +634,27 @@
 		</td>
 	</tr>
 	<tr>
-		<td style="width:70%"><img src="https://i.imgur.com/FrqZYPR.png">&emsp;HP</td>
+		<td style="width:70%;padding-left:5px"><img src="https://i.imgur.com/FrqZYPR.png">&emsp;HP</td>
 		<td style="padding-left:5px" id="shipParameterHP"></td>
 	</tr>
 	<tr>
-		<td style="width:70%"><img src="https://i.imgur.com/2DLhZpS.png">&emsp;Anti-air</td>
+		<td style="width:70%;padding-left:5px"><img src="https://i.imgur.com/2DLhZpS.png">&emsp;Anti-air</td>
 		<td style="padding-left:5px" id="shipParameterAntiAir"></td>
 	</tr>
 	<tr>
-		<td style="width:70%"><img src="https://i.imgur.com/2DLhZpS.png">&emsp;Evasion</td>
+		<td style="width:70%;padding-left:5px"><img src="https://i.imgur.com/2DLhZpS.png">&emsp;Evasion</td>
 		<td style="padding-left:5px" id="shipParameterEvasion"></td>
 	</tr>
 	<tr>
-		<td style="width:70%"><img src="https://i.imgur.com/iy5ZBP3.png">&emsp;Aviation</td>
+		<td style="width:70%;padding-left:5px"><img src="https://i.imgur.com/iy5ZBP3.png">&emsp;Aviation</td>
 		<td style="padding-left:5px" id="shipParameterAviation"></td>
 	</tr>
 	<tr>
-		<td style="width:70%"><img src="https://i.imgur.com/JNDOCmX.png">&emsp;Torpedo</td>
+		<td style="width:70%;padding-left:5px"><img src="https://i.imgur.com/JNDOCmX.png">&emsp;Torpedo</td>
 		<td style="padding-left:5px" id="shipParameterTorpedo"></td>
 	</tr>
 	<tr>
-		<td style="width:70%"><img src="https://i.imgur.com/bDXQQg8.png">&emsp;Firepower</td>
+		<td style="width:70%;padding-left:5px"><img src="https://i.imgur.com/bDXQQg8.png">&emsp;Firepower</td>
 		<td style="padding-left:5px" id="shipParameterFirepower"></td>
 	</tr>
 </table>
