--- a/ship.html
+++ b/ship.html
@@ -657,6 +657,18 @@
 		<td style="width:70%;padding-left:5px"><img src="https://i.imgur.com/bDXQQg8.png">&emsp;Firepower</td>
 		<td style="padding-left:5px" id="shipParameterFirepower"></td>
 	</tr>
+	<tr>
+		<td colspan="2" style="background:#262f3b;height:30px">
+			<b>
+				<font style="vertical-align: inherit;">Stats</font>
+			</b>
+		</td>
+	</tr>
+	<tr>
+		<td>Base</td>
+		<td>Lv. 120</td>
+		<td>Retrofit (120)</td>
+	</tr>
 </table>
 
 </div>
