--- a/ship.html
+++ b/ship.html
@@ -665,9 +665,11 @@
 		</td>
 	</tr>
 	<tr>
-		<td>Base</td>
-		<td>Lv. 120</td>
-		<td>Retrofit (120)</td>
+		<td>
+			<div>Base</div>
+			<div>Lv. 120</div>
+			<div>Retrofit (120)</div>
+		</td>
 	</tr>
 </table>
 
