--- a/ship.html
+++ b/ship.html
@@ -176,7 +176,7 @@
 			container.setAttribute('onclick','onExpressionNavButtonClick(\'' + JSON.stringify(data.expression[x]) + '\')');
 			if (firstIteration){
 				container.src = data.expression[x].icon;
-				container.className = "btnExpr btnExprActive";
+				container.className = "btnExprActive";
 				firstIteration = false;
 				initial = JSON.stringify(data.expression[x]);
 			} else {
