--- a/ship.html
+++ b/ship.html
@@ -203,7 +203,7 @@
 		
 		for (var i = 0; i < obj.length; ++i){
 			if (obj[i].id == id) {
-				document.getElementById(id).className = 'btnExpr btnExprActive';
+				document.getElementById(id).className = 'btnExprActive';
 				loadShipSkinExpressionElements(expr);
 			} else if (obj[i].id != id){
 				document.getElementById(obj[i].id).className = 'btnExpr';	
