--- a/ship.html
+++ b/ship.html
@@ -215,6 +215,15 @@
 		document.getElementById("shipSkinDisplay").src = expr.full;
 	}
 	
+	function setActiveFromButtonGroup(idList, activeId){
+		document.getElementById(activeId).className = "btnGenericTextActive";
+		for (var i = 0; i < idList.length; ++i){
+			if (idList[i] != activeId){
+				document.getElementById(idList[i]).className = "btnGenericText";
+			}
+		}
+	}
+	
 	window.onload = function() {
 	  init();
 	};
@@ -622,7 +631,7 @@
 
 <div class="leftCol">
 
-<!-- -->
+<!-- Parameters -->
 <table class="wikitable-a" style="width:100%;">
 	<tr style="text-align:center">
 		<td colspan="2"  style="background:#000000;height:30px" id="shipRarityColor4">
@@ -666,9 +675,15 @@
 	</tr>
 	<tr>
 		<td>
-			<div>Base</div>
-			<div>Lv. 120</div>
-			<div>Retrofit (120)</div>
+			<div style="btnGeneric">
+				<div style="btnGenericText" id="shipStatBase" onclick='setActiveFromButtonGroup(["shipStatBase","shipStatMax","shipStatMaxKai"],shipStatBase)'>Base</div>
+			</div>
+			<div style="btnGeneric">
+				<div style="btnGenericText" id="shipStatMax" onclick='setActiveFromButtonGroup(["shipStatBase","shipStatMax","shipStatMaxKai"],shipStatMax)'>Lv. 120</div>
+			</div>
+			<div style="btnGeneric">
+				<div style="btnGenericText" id="shipStatMaxKai" onclick='setActiveFromButtonGroup(["shipStatBase","shipStatMax","shipStatMaxKai"],shipStatMaxKai)'>Retrofit (120)</div>
+			</div>
 		</td>
 	</tr>
 </table>
