--- a/ship.html
+++ b/ship.html
@@ -675,14 +675,14 @@
 	</tr>
 	<tr>
 		<td>
-			<div style="btnGeneric">
-				<div style="btnGenericText" id="shipStatBase" onclick='setActiveFromButtonGroup(["shipStatBase","shipStatMax","shipStatMaxKai"],shipStatBase)'>Base</div>
+			<div class="btnGeneric">
+				<div class="btnGenericText" id="shipStatBase" onclick='setActiveFromButtonGroup(["shipStatBase","shipStatMax","shipStatMaxKai"],shipStatBase)'>Base</div>
 			</div>
-			<div style="btnGeneric">
-				<div style="btnGenericText" id="shipStatMax" onclick='setActiveFromButtonGroup(["shipStatBase","shipStatMax","shipStatMaxKai"],shipStatMax)'>Lv. 120</div>
+			<div class="btnGeneric">
+				<div class="btnGenericText" id="shipStatMax" onclick='setActiveFromButtonGroup(["shipStatBase","shipStatMax","shipStatMaxKai"],shipStatMax)'>Lv. 120</div>
 			</div>
-			<div style="btnGeneric">
-				<div style="btnGenericText" id="shipStatMaxKai" onclick='setActiveFromButtonGroup(["shipStatBase","shipStatMax","shipStatMaxKai"],shipStatMaxKai)'>Retrofit (120)</div>
+			<div class="btnGeneric">
+				<div class="btnGenericText" id="shipStatMaxKai" onclick='setActiveFromButtonGroup(["shipStatBase","shipStatMax","shipStatMaxKai"],shipStatMaxKai)'>Retrofit (120)</div>
 			</div>
 		</td>
 	</tr>
