--- a/ship.html
+++ b/ship.html
@@ -674,15 +674,15 @@
 		</td>
 	</tr>
 	<tr>
-		<td>
+		<td colspan="2">
 			<div class="btnGeneric">
-				<div class="btnGenericText" id="shipStatBase" onclick='setActiveFromButtonGroup(["shipStatBase","shipStatMax","shipStatMaxKai"],shipStatBase)'>Base</div>
+				<div class="btnGenericText" id="shipStatBase" onclick='setActiveFromButtonGroup(["shipStatBase","shipStatMax","shipStatMaxKai"],"shipStatBase")'>Base</div>
 			</div>
 			<div class="btnGeneric">
-				<div class="btnGenericText" id="shipStatMax" onclick='setActiveFromButtonGroup(["shipStatBase","shipStatMax","shipStatMaxKai"],shipStatMax)'>Lv. 120</div>
+				<div class="btnGenericText" id="shipStatMax" onclick='setActiveFromButtonGroup(["shipStatBase","shipStatMax","shipStatMaxKai"],"shipStatMax")'>Lv. 120</div>
 			</div>
 			<div class="btnGeneric">
-				<div class="btnGenericText" id="shipStatMaxKai" onclick='setActiveFromButtonGroup(["shipStatBase","shipStatMax","shipStatMaxKai"],shipStatMaxKai)'>Retrofit (120)</div>
+				<div class="btnGenericText" id="shipStatMaxKai" onclick='setActiveFromButtonGroup(["shipStatBase","shipStatMax","shipStatMaxKai"],"shipStatMaxKai")'>Retrofit (120)</div>
 			</div>
 		</td>
 	</tr>
