--- a/ship.html
+++ b/ship.html
@@ -702,7 +702,7 @@
 				<div class="btnGenericText" id="shipStatMax" onclick='setActiveFromButtonGroup(["shipStatBase","shipStatMax","shipStatMaxKai"],"shipStatMax","120")'>Lv. 120</div>
 			</div>
 			<div class="btnGeneric">
-				<div class="btnGenericText" id="shipStatMaxKai" onclick='setActiveFromButtonGroup(["shipStatBase","shipStatMax","shipStatMaxKai"],"shipStatMaxKai","120retrofit)'>Retrofit (120)</div>
+				<div class="btnGenericText" id="shipStatMaxKai" onclick='setActiveFromButtonGroup(["shipStatBase","shipStatMax","shipStatMaxKai"],"shipStatMaxKai","120retrofit")'>Retrofit (120)</div>
 			</div>
 		</td>
 	</tr>
@@ -741,7 +741,7 @@
 				</tr>
 				<tr>
 					<td style="padding-left:5px"><img src="https://i.imgur.com/e7GKwuJ.png">&emsp;Armor</td>
-					<td colspan="3" style="text-align:center" id="shipStatsArmor"></td>
+					<td colspan="3" style="text-align:left;padding-left:5px" id="shipStatsArmor"></td>
 				</tr>
 			</table>
 		</td>
