--- a/ship.html
+++ b/ship.html
@@ -245,7 +245,7 @@
 	
 	window.onload = function() {
 	  init();
-	  loadActiveStats("base");
+	  setActiveFromButtonGroup(["shipStatBase","shipStatMax","shipStatMaxKai"],"shipStatBase","base");
 	};
 	
 	</script>
