--- a/ship.html
+++ b/ship.html
@@ -88,26 +88,26 @@
 			document.getElementById("shipLimitBreakT1").innerHTML = actual_JSON.limitBreak.tier1;
 			document.getElementById("shipLimitBreakT2").innerHTML = actual_JSON.limitBreak.tier2;
 			document.getElementById("shipLimitBreakT3").innerHTML = actual_JSON.limitBreak.tier3;
-			document.getElementById("shipEquipmentLoadoutType1").innerHTML = actual_JSON.equipmentLoadout.1.type;
-			document.getElementById("shipEquipmentLoadoutType2").innerHTML = actual_JSON.equipmentLoadout.2.type;
-			document.getElementById("shipEquipmentLoadoutType3").innerHTML = actual_JSON.equipmentLoadout.3.type;
-			document.getElementById("shipEquipmentLoadoutType4").innerHTML = actual_JSON.equipmentLoadout.4.type;
-			document.getElementById("shipEquipmentLoadoutType5").innerHTML = actual_JSON.equipmentLoadout.5.type;
-			document.getElementById("shipEquipmentLoadoutEfficiency1").innerHTML = actual_JSON.equipmentLoadout.1.efficiency;
-			document.getElementById("shipEquipmentLoadoutEfficiency2").innerHTML = actual_JSON.equipmentLoadout.2.efficiency;
-			document.getElementById("shipEquipmentLoadoutEfficiency3").innerHTML = actual_JSON.equipmentLoadout.3.efficiency;
-			document.getElementById("shipEquipmentLoadoutEfficiency4").innerHTML = actual_JSON.equipmentLoadout.4.efficiency;
-			document.getElementById("shipEquipmentLoadoutEfficiency5").innerHTML = actual_JSON.equipmentLoadout.5.efficiency;
-			document.getElementById("shipEquipmentLoadoutQuantity1").innerHTML = actual_JSON.equipmentLoadout.1.amount;
-			document.getElementById("shipEquipmentLoadoutQuantity2").innerHTML = actual_JSON.equipmentLoadout.2.amount;
-			document.getElementById("shipEquipmentLoadoutQuantity3").innerHTML = actual_JSON.equipmentLoadout.3.amount;
-			document.getElementById("shipEquipmentLoadoutQuantity4").innerHTML = actual_JSON.equipmentLoadout.4.amount;
-			document.getElementById("shipEquipmentLoadoutQuantity5").innerHTML = actual_JSON.equipmentLoadout.5.amount;
-			document.getElementById("shipEquipmentLoadoutPreload1").innerHTML = actual_JSON.equipmentLoadout.1.preload;
-			document.getElementById("shipEquipmentLoadoutPreload2").innerHTML = actual_JSON.equipmentLoadout.2.preload;
-			document.getElementById("shipEquipmentLoadoutPreload3").innerHTML = actual_JSON.equipmentLoadout.3.preload;
-			document.getElementById("shipEquipmentLoadoutPreload4").innerHTML = actual_JSON.equipmentLoadout.4.preload;
-			document.getElementById("shipEquipmentLoadoutPreload5").innerHTML = actual_JSON.equipmentLoadout.5.preload;
+			document.getElementById("shipEquipmentLoadoutType1").innerHTML = actual_JSON.equipmentLoadout["1"].type;
+			document.getElementById("shipEquipmentLoadoutType2").innerHTML = actual_JSON.equipmentLoadout["2"].type;
+			document.getElementById("shipEquipmentLoadoutType3").innerHTML = actual_JSON.equipmentLoadout["3"].type;
+			document.getElementById("shipEquipmentLoadoutType4").innerHTML = actual_JSON.equipmentLoadout["4"].type;
+			document.getElementById("shipEquipmentLoadoutType5").innerHTML = actual_JSON.equipmentLoadout["5"].type;
+			document.getElementById("shipEquipmentLoadoutEfficiency1").innerHTML = actual_JSON.equipmentLoadout["1"].efficiency;
+			document.getElementById("shipEquipmentLoadoutEfficiency2").innerHTML = actual_JSON.equipmentLoadout["2"].efficiency;
+			document.getElementById("shipEquipmentLoadoutEfficiency3").innerHTML = actual_JSON.equipmentLoadout["3"].efficiency;
+			document.getElementById("shipEquipmentLoadoutEfficiency4").innerHTML = actual_JSON.equipmentLoadout["4"].efficiency;
+			document.getElementById("shipEquipmentLoadoutEfficiency5").innerHTML = actual_JSON.equipmentLoadout["5"].efficiency;
+			document.getElementById("shipEquipmentLoadoutQuantity1").innerHTML = actual_JSON.equipmentLoadout["1"].amount;
+			document.getElementById("shipEquipmentLoadoutQuantity2").innerHTML = actual_JSON.equipmentLoadout["2"].amount;
+			document.getElementById("shipEquipmentLoadoutQuantity3").innerHTML = actual_JSON.equipmentLoadout["3"].amount;
+			document.getElementById("shipEquipmentLoadoutQuantity4").innerHTML = actual_JSON.equipmentLoadout["4"].amount;
+			document.getElementById("shipEquipmentLoadoutQuantity5").innerHTML = actual_JSON.equipmentLoadout["5"].amount;
+			document.getElementById("shipEquipmentLoadoutPreload1").innerHTML = actual_JSON.equipmentLoadout["1"].preload;
+			document.getElementById("shipEquipmentLoadoutPreload2").innerHTML = actual_JSON.equipmentLoadout["2"].preload;
+			document.getElementById("shipEquipmentLoadoutPreload3").innerHTML = actual_JSON.equipmentLoadout["3"].preload;
+			document.getElementById("shipEquipmentLoadoutPreload4").innerHTML = actual_JSON.equipmentLoadout["4"].preload;
+			document.getElementById("shipEquipmentLoadoutPreload5").innerHTML = actual_JSON.equipmentLoadout["5"].preload;
 			
 			
 			setShipHullIcon(actual_JSON.hull);
