--- a/ship.html
+++ b/ship.html
@@ -834,25 +834,29 @@
 		<td id="shipEquipmentLoadoutEfficiency1"></td>
 		<td id="shipEquipmentLoadoutQuantity1"></td>
 		<td id="shipEquipmentLoadoutPreload1"></td>
-	</tr><tr style="text-align:center;">
+	</tr>
+	<tr style="text-align:center;">
 		<td>2</td>
 		<td id="shipEquipmentLoadoutType2"></td>
 		<td id="shipEquipmentLoadoutEfficiency2"></td>
 		<td id="shipEquipmentLoadoutQuantity2"></td>
 		<td id="shipEquipmentLoadoutPreload2"></td>
-	</tr><tr style="text-align:center;">
+	</tr>
+	<tr style="text-align:center;">
 		<td>3</td>
 		<td id="shipEquipmentLoadoutType3"></td>
 		<td id="shipEquipmentLoadoutEfficiency3"></td>
 		<td id="shipEquipmentLoadoutQuantity3"></td>
 		<td id="shipEquipmentLoadoutPreload3"></td>
-	</tr><tr style="text-align:center;">
+	</tr>
+	<tr style="text-align:center;">
 		<td>4</td>
-		<td id="shipEquipmentLoadoutType14"></td>
+		<td id="shipEquipmentLoadoutType4"></td>
 		<td id="shipEquipmentLoadoutEfficiency4"></td>
 		<td id="shipEquipmentLoadoutQuantity4"></td>
 		<td id="shipEquipmentLoadoutPreload4"></td>
-	</tr><tr style="text-align:center;">
+	</tr>
+	<tr style="text-align:center;">
 		<td>5</td>
 		<td id="shipEquipmentLoadoutType5"></td>
 		<td id="shipEquipmentLoadoutEfficiency5"></td>
