--- a/ship.html
+++ b/ship.html
@@ -329,7 +329,7 @@
         </nav>
 
         <!-- Page Content  -->
-        <div id="content"  style="background-color:#515c6b">
+        <div id="content"  style="background-color:#515c6b;overflow:auto">
 
             <nav class="navbar navbar-expand-lg navbar-light" style="background-color:#262f3b">
                 <div class="container-fluid">
