--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <!-- Sidebar  -->
         <nav id="sidebar">
             <div class="sidebar-header">
-                <h3>/alg/ Wikipedia</h3>
+                <h3>/alg/ Wikipedia</h3>				
             </div>
 
             <ul class="list-unstyled components">
@@ -58,7 +58,7 @@
         </nav>
 
         <!-- Page Content  -->
-        <div id="content"  style="background-color:#515c6b">
+        <div id="content"  style="background-color:#515c6b;overflow:auto">
 
             <nav class="navbar navbar-expand-lg navbar-light" style="background-color:#262f3b">
                 <div class="container-fluid">
