--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </nav>
 
         <!-- Page Content  -->
-        <div id="content"  style="background-color:#515c6b;overflow:auto">
+        <div id="content"  style="background-color:#515c6b">
 
             <nav class="navbar navbar-expand-lg navbar-light" style="background-color:#262f3b">
                 <div class="container-fluid">
