--- a/ship.html
+++ b/ship.html
@@ -320,11 +320,11 @@
 		for (var x in data.skill) {
 			text = text + '\
 			<tr>\
-				<td style="text-align:left;padding-left:5px;white-space: nowrap;">\
+				<td style="text-align:left;padding:10px;white-space: nowrap;">\
 					<img src="'+data.skill[x].skillIcon+'">&emsp;'+data.skill[x].name+'\
 				</td>\
-				<td style="text-align:left;padding-left:5px">'+data.skill[x].description+'</td>\
-				<td style="white-space: nowrap;">'+data.skill[x].requirement+'</td>\
+				<td style="text-align:left;padding:10px">'+data.skill[x].description+'</td>\
+				<td style="padding:10pxwhite-space: nowrap;">'+data.skill[x].requirement+'</td>\
 			</tr>';		
 		}
 		document.getElementById("shipSkillSet").innerHTML = text;
