--- a/ship.html
+++ b/ship.html
@@ -194,7 +194,7 @@
 	function loadShipSkinElements(skin){
 		document.getElementById("shipSkinDesc").innerHTML = skin.description;
 		document.getElementById("shipSkinSD").src = skin.sd;
-		document.getElementById("shipSkinName").innerHTML = '<b>' +skin.name '</b>';
+		document.getElementById("shipSkinName").innerHTML = '<b>' +skin.name+ '</b>';
 		document.getElementById("shipSkinDisplay").src = skin.image;
 		
 		removeShipExpressionNav();
